// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkingOn > should render WorkingOn default 1`] = `
<DocumentFragment>
  <div
    class="_root_fcc54c  "
  >
    <span
      class="_title_fcc54c"
    >
      Working on
    </span>
    <div
      class="_list_fcc54c"
    >
      <div
        class="_list-item_fcc54c"
      >
        <div
          class="_circle_fcc54c"
        />
        <a
          class="_list-item-text_fcc54c"
          href="https://telegram.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          telegram.org
        </a>
      </div>
      <div
        class="_list-item_fcc54c"
      >
        <div
          class="_circle_fcc54c"
        />
        <a
          class="_list-item-text_fcc54c"
          href="https://www.whatsapp.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          whatsapp.com
        </a>
      </div>
      <div
        class="_list-item_fcc54c"
      >
        <div
          class="_circle_fcc54c"
        />
        <a
          class="_list-item-text_fcc54c"
          href="https://www.facebook.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          facebook.com
        </a>
      </div>
      <div
        class="_list-item_fcc54c"
      >
        <div
          class="_circle_fcc54c"
        />
        <a
          class="_list-item-text_fcc54c"
          href="https://twitter.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          twitter.com
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WorkingOn > should render WorkingOn when the dapplet settings is closed 1`] = `
<DocumentFragment>
  <div
    class="_root_fcc54c _ds-closed_fcc54c "
  >
    <span
      class="_title_fcc54c"
    >
      Working on
    </span>
    <div
      class="_list_fcc54c"
    >
      <div
        class="_list-item_fcc54c"
      >
        <div
          class="_circle_fcc54c"
        />
        <a
          class="_list-item-text_fcc54c"
          href="https://telegram.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          telegram.org
        </a>
      </div>
      <div
        class="_list-item_fcc54c"
      >
        <div
          class="_circle_fcc54c"
        />
        <a
          class="_list-item-text_fcc54c"
          href="https://www.whatsapp.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          whatsapp.com
        </a>
      </div>
      <div
        class="_list-item_fcc54c"
      >
        <div
          class="_circle_fcc54c"
        />
        <a
          class="_list-item-text_fcc54c"
          href="https://www.facebook.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          facebook.com
        </a>
      </div>
      <div
        class="_list-item_fcc54c"
      >
        <div
          class="_circle_fcc54c"
        />
        <a
          class="_list-item-text_fcc54c"
          href="https://twitter.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          twitter.com
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
